--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
