--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "localhostjs": "^0.3.0",
-    "puppeteer": "^22.3.0"
+    "puppeteer": "^22.3.0",
+    "xml-js": "^1.6.11"
   }
 }
